// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RoundedButton /> should be able to change textStyle 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={false}
  feedback="opacity"
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "red",
        "borderRadius": 16,
        "elevation": 2,
        "height": 40,
        "justifyContent": "center",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 13,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 25,
        "width": "100%",
      },
      Object {
        "backgroundColor": Object {
          "color": Array [
            233,
            82,
            128,
          ],
          "model": "rgb",
          "valpha": 1,
        },
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 16,
          "fontWeight": "400",
        },
        Array [
          Object {
            "color": "#fff",
          },
          Object {
            "color": "red",
            "fontSize": 20,
          },
        ],
      ]
    }
  >
    Hello World
  </Text>
</TouchableOpacity>
`;

exports[`<RoundedButton /> should be in disabled mode if disabled true 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={true}
  feedback="opacity"
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "red",
        "borderRadius": 16,
        "elevation": 2,
        "height": 40,
        "justifyContent": "center",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 13,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 25,
        "width": "100%",
      },
      Object {
        "backgroundColor": Object {
          "color": Array [
            341.7218543046358,
            77.4358974358974,
            92.64705882352942,
          ],
          "model": "hsl",
          "valpha": 1,
        },
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 16,
          "fontWeight": "400",
        },
        Array [
          Object {
            "color": "#fff",
          },
          undefined,
        ],
      ]
    }
  >
    Hello World
  </Text>
</TouchableOpacity>
`;

exports[`<RoundedButton /> should be in disabled mode if loading true and show ActivityIndicator 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RoundedButton
    loading={true}
    onPress={[Function]}
    variant="primary"
  >
    Hello World
  </RoundedButton>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <ActivityIndicator
        animating={true}
        color="#999999"
        hidesWhenStopped={true}
        size="small"
      />,
      "disabled": true,
      "feedback": "opacity",
      "onPress": [Function],
      "style": Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "red",
          "borderRadius": 16,
          "elevation": 2,
          "height": 40,
          "justifyContent": "center",
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 13,
            "width": 0,
          },
          "shadowOpacity": 0.12,
          "shadowRadius": 25,
          "width": "100%",
        },
        Object {
          "backgroundColor": Object {
            "color": Array [
              341.7218543046358,
              77.4358974358974,
              92.64705882352942,
            ],
            "model": "hsl",
            "valpha": 1,
          },
        },
        undefined,
      ],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "animating": true,
        "color": "#999999",
        "hidesWhenStopped": true,
        "size": "small",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <ActivityIndicator
          animating={true}
          color="#999999"
          hidesWhenStopped={true}
          size="small"
        />,
        "disabled": true,
        "feedback": "opacity",
        "onPress": [Function],
        "style": Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "red",
            "borderRadius": 16,
            "elevation": 2,
            "height": 40,
            "justifyContent": "center",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 13,
              "width": 0,
            },
            "shadowOpacity": 0.12,
            "shadowRadius": 25,
            "width": "100%",
          },
          Object {
            "backgroundColor": Object {
              "color": Array [
                341.7218543046358,
                77.4358974358974,
                92.64705882352942,
              ],
              "model": "hsl",
              "valpha": 1,
            },
          },
          undefined,
        ],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animating": true,
          "color": "#999999",
          "hidesWhenStopped": true,
          "size": "small",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<RoundedButton /> should renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={false}
  feedback="opacity"
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "red",
        "borderRadius": 16,
        "elevation": 2,
        "height": 40,
        "justifyContent": "center",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 13,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 25,
        "width": "100%",
      },
      Object {
        "backgroundColor": Object {
          "color": Array [
            233,
            82,
            128,
          ],
          "model": "rgb",
          "valpha": 1,
        },
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 16,
          "fontWeight": "400",
        },
        Array [
          Object {
            "color": "#fff",
          },
          undefined,
        ],
      ]
    }
  >
    Hello World
  </Text>
</TouchableOpacity>
`;

exports[`<RoundedButton /> should throw error if variant or color not passed as props 1`] = `"RoundedButton: You must provided at least one of variant or color"`;
